--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>canvas app</title>
-    <script type="module" src="./last.ts"></script>
+    <script type="module" src="./index.ts"></script>
     <style>
       canvas {
         position: fixed;
